Navigating from home to tutorial and about

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -12,7 +12,7 @@
     </nav>
     <h1>Hi</h1>
     <p>My name is....</p>
-    <img src="eminem.jpg" style="width:500px; height:500px">
+    <img src="{{ url_for('static', filename= 'eminem.jpg') }}" style="width:500px; height:500px">
     <br>
     <br>
     <a href="https://shop.eminem.com">Shady</a>
