Returning temperature for station and date from csv files

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Weather Data API</h1>
     <p>URL format : http://127.0.0.1:5000/api/v1/</p>
-    <p>URL example: http://127.0.0.1:5000/api/v1/10/19991025</p>
+    <p>URL example: http://127.0.0.1:5000/api/v1/10/1999-10-25</p>
     <a href="/tutorial/">Tutorial</a>
 </body>
 </html>
