Show station table on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+    <a href="/tutorial/">Tutorial</a>
     <h1>Weather Data API</h1>
     <p>URL format : http://127.0.0.1:5000/api/v1/</p>
     <p>URL example: http://127.0.0.1:5000/api/v1/10/1999-10-25</p>
-    <a href="/tutorial/">Tutorial</a>
+    <p>Stations code are down below:</p>
+    <p>{{data|safe}}</p>
 </body>
 </html>
