--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>EuroSkyline</title>
 </head>
 <body>
-    <a href="/tutorial/">Tutorial</a>
-    <h1>Weather Data API</h1>
+    <a href="/tutorial/">Webpage Tutorial</a>
+    <h1>EuroSkyline</h1>
     <p>URL format : http://127.0.0.1:5000/api/v1/</p>
-    <p>URL example: http://127.0.0.1:5000/api/v1/10/1999-10-25</p>
+    <p>For one station for specific date: http://127.0.0.1:5000/api/v1/10/1999-10-25</p>
+    <p>For one station and any date: http://127.0.0.1:5000/api/v1/5</p>
+    <p>For one station for specific year: http://127.0.0.1:5000/api/v1/yearly/9/1988</p>
     <p>Stations code are down below:</p>
     <p>{{data|safe}}</p>
 </body>
